[Fix #70] Changed position of comment overlay to avoid overlapping with other elements

--- a/src/styles/s-forms.css
+++ b/src/styles/s-forms.css
@@ -43,6 +43,11 @@
   padding-right: 0;
 }
 
+.overlay-comment {
+  position: absolute;
+  z-index: 10;
+}
+
 svg {
   fill: currentColor;
 }
